# tavern-cargo-template

./: .cargo-generate-cleanup.bat  .cargo-generate-cleanup.rhai  .cargo-generate-cleanup.sh  .genignore  .gitignore  Cargo.toml  DEVELOPMENT.md  PACKAGING.md  README.md  TEMPLATE_README.md  TESTING.md  cargo-generate.toml  package.json  test-generation.bat  test-generation.sh  tsconfig.json  vite.config.ts
.claude/: settings.local.json
actix/: Cargo.toml  README.md  build.rs  cargo-generate.toml  justfile  package.json  vite.config.ts
actix/src/: main.tsx
actix/src-actix/: lib.rs  main.rs  test_endpoint.rs
actix/src-actix/util/: asset_endpoint.rs  mod.rs
actix/src/assets/components/: Navigation.tsx
actix/src/assets/providers/: ThemeProvider.tsx
actix/src/components/: Navigation.tsx
actix/src/css/: index.css
actix/src/providers/: ThemeProvider.tsx
nodejs/: cargo-generate.toml  package.json  vite.config.ts
nodejs/src/assets/components/: Navigation.tsx
php/: .env.example  cargo-generate.toml  composer.json  package.json  vite.config.ts
php/resources/views/: app.blade.php
php/src/assets/pages/: About.tsx
php/src/assets/providers/: ThemeProvider.tsx
public/: index.php
server/: index.js
shared-frontend/assets/pages/: Home.tsx
src-actix/: lib.rs
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
tauri/: README.md  cargo-generate.toml  package.json
tauri/src/: main.tsx
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/capabilities/: default.json
tauri/src/assets/components/: Navigation.tsx
tauri/src/assets/providers/: ThemeProvider.tsx
test-output/test-actix/: Cargo.toml  package.json  vite.config.ts
test-output/test-actix/src-actix/: lib.rs  main.rs
test-output/test-actix/src/assets/components/: Navigation.tsx
test-output/test-nodejs/: package.json  vite.config.ts
test-output/test-nodejs/server/: index.js
test-output/test-nodejs/src/assets/components/: Navigation.tsx
test-output/test-php/: .env.example  composer.json  package.json  vite.config.ts
test-output/test-php/routes/: api.php
test-output/test-php/src/assets/components/: Navigation.tsx
test-output/test-tauri/: Cargo.toml  package.json  vite.config.ts
test-output/test-tauri/src-tauri/: Cargo.toml  tauri.conf.json
test-output/test-tauri/src-tauri/capabilities/: default.json
test-output/test-tauri/src/assets/components/: Navigation.tsx
test-output/test-vanilla/: package.json  vite.config.ts
test-output/test-vanilla/src/assets/components/: Navigation.tsx
vanilla/: cargo-generate.toml  package.json
