[package]
name = "test_actix"
version = "0.1.0"
edition = "2024"
description = "Test actix project"
authors = ["Drew Chase (Work) <dcmanproductions@gmail.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/test/test"

[dependencies]
actix-web = "4"
actix-files = "0.6.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
env_logger = "0.11.6"
log = "0.4.22"
futures = "0.3.31"

[dev-dependencies]
vite-actix = "0.3.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
