[package]
name = "test_tauri"
version = "0.1.0"
description = "Test tauri project"
authors = ["Drew Chase (Work) <dcmanproductions@gmail.com>"]
repository = "https://github.com/test/test"
edition = "2024"

[lib]
name = "test_tauri_lib"
crate-type = ["staticlib", "cdylib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
